chore: add swagger authenticcation
